<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Web Server</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_server">Web Server</string>
	<string name="turn_on_server">Turn on server</string>
	<string name="turn_off_server">Turn off server</string>
	<string name="server_off">Web server is off</string>
	<string name="server_on">Web server is on,access by this url</string>
	<string name="server_suspend">Web server is suspend</string>
	<string name="storage_off">Attention,the storage device is not available</string>
	<string name="wifi_off">Network is not available</string>
	<string name="web_file_extract">Initializing...</string>
	<string name="notification_title">Web server is running</string>
	<string name="notification_content">Server address：%s</string>
	<string name="server_settings">Server settings</string>
	<string name="server_port">Server Port</string>
	<string name="server_port_summary">Server port is %d</string>
	<string name="server_port_dialog_title">Input the server port</string>
	<string name="server_port_invalid">Port number must be between 1024 and 65535</string>
	<string name="server_port_occupied">Port %d is occupied by others, please set new port in settings menu.</string>
	<string name="browser_no_html5_support">Your browser do not support %s playback</string>
	<string name="about">About</string>
	<string name="version">Version</string>
	<string name="auto_start">Auto start</string>
	<string name="auto_start_on">Server will auto start after boot completed.</string>
	<string name="auto_start_off">Server auto start is forbidden</string>
	<string name="unable_to_launch">Unable to launch app</string>
</resources>