<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/server_settings" >
        <EditTextPreference
            android:dialogTitle="@string/server_port_dialog_title"
            android:key="edittext_server_port"
            android:numeric="integer"
            android:summary="@string/server_port_summary"
            android:title="@string/server_port" />
        <CheckBoxPreference 
            android:key="key_auto_start"
            android:title="@string/auto_start"
            android:summaryOn="@string/auto_start_on"
            android:summaryOff="@string/auto_start_off"> 
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about" >
        <Preference
            android:key="prdference_version"
            android:title="@string/version" />
    </PreferenceCategory>

</PreferenceScreen>